# root_v2app

./: .gitignore  ARCHITECTURE.md  flutter_rust_bridge.yaml  project_structure.txt
.github/workflows/: ci.yml  deploy.yml
rust/: Cargo.toml  flutter_rust_bridge.yaml
rust/root-core/: Cargo.toml
rust/root-core/src/: lib.rs  state.rs
rust/root-crypto/: Cargo.toml
rust/root-crypto/src/: argon.rs  asymmetric.rs  constants.rs  error.rs  lib.rs  mod.rs  symmetric.rs  types.rs
rust/root-domain/: Cargo.toml
rust/root-domain/src/: error.rs  lib.rs
rust/root-domain/src/entities/: account.rs  contact.rs  message.rs  mod.rs
rust/root-domain/src/ports/: mod.rs  storage.rs
rust/root-economy/: Cargo.toml
rust/root-economy/src/: account.rs  constants.rs  error.rs  ledger.rs  lib.rs  mod.rs  treasury.rs  types.rs  vesting.rs
rust/root-ffi/: Cargo.toml
rust/root-ffi/src/: error.rs  lib.rs  runtime.rs
rust/root-ffi/src/api/: contacts.rs  database.rs  economy.rs  identity.rs  messaging.rs  mod.rs  p2p.rs  state.rs  types.rs  utils.rs
rust/root-ffi/src/cli/: main.rs
rust/root-ffi/src/cli/commands/: contacts.rs  db.rs  messages.rs  node.rs
rust/root-ffi/src/storage/: database.rs  key.rs
rust/root-identity/: Cargo.toml
rust/root-identity/src/: constants.rs  error.rs  keys.rs  lib.rs  protected.rs  shamir.rs
rust/root-network/: Cargo.toml
rust/root-network/src/: behaviour.rs  channels.rs  error.rs  lib.rs  main.rs  mod.rs  node.rs  topic.rs
rust/root-storage/: Cargo.toml
rust/root-storage/src/: constants.rs  database.rs  error.rs  key.rs  lib.rs  merkle.rs  models.rs  panic.rs  ports.rs  test_utils.rs
rust/root-tauri-peer2/src/: index.html
rust/root-tauri-peer2/src-tauri/: tauri.conf.json
rust/root-tauri-peer2/src-tauri/capabilities/: default.json
rust/root-tauri/src/: index.html
rust/root-tauri/src-tauri/: Cargo.toml  tauri.conf.json
rust/root-tauri/src-tauri/src/: main.rs
rust/root-tauri/src/css/: style-additions.css  style.css
rust/root-tauri/src/js/: chat-actions.js  contacts.js  database.js  diagnostics.js  formatting.js  identity.js  main.js  messaging.js  neural.js  p2p.js  profile.js
rust/src/: lib.rs
rust/src/api/: contacts.rs  database.rs  economy.rs  identity.rs  messaging.rs  mod.rs  p2p.rs  state.rs  types.rs  utils.rs
rust/src/cli/: main.rs
rust/src/cli/commands/: contacts.rs  db.rs  identity.rs  messages.rs  mod.rs  node.rs  server.rs
rust/src/crypto/: argon.rs  asymmetric.rs  mod.rs  symmetric.rs
rust/src/economy/: account.rs  consensus.rs  constants.rs  ledger.rs  mod.rs  protection.rs  treasury.rs  types.rs  vesting.rs
rust/src/identity/: keys.rs  mod.rs  protected.rs  seed.rs  shamir.rs
rust/src/network/: behaviour.rs  channels.rs  mod.rs  node.rs
rust/src/storage/: database.rs  error.rs  key.rs  merkle.rs  mod.rs  models.rs  panic.rs
