[package]
name = "root_identity"
version = "0.1.0"
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(frb_expand)'] }

[lib]
name = "root_core"
crate-type = ["cdylib", "staticlib"]
path = "src/lib.rs"

# ── Исполняемые файлы ────────────────────────────────────────

[[bin]]
name = "root-cli"
path = "src/cli/main.rs"

# ── Зависимости ──────────────────────────────────────────────

[dependencies]
# Криптография
bip39          = "2.0"
ed25519-dalek  = { version = "2.0", features = ["rand_core"] }
rand           = { version = "0.8", features = ["getrandom"] }
dirs = "5.0"  # Путь к app data (для соли)


sharks         = "0.5"
chacha20poly1305 = "0.10"      # ChaCha20-Poly1305 AEAD шифрование
zeroize = { version = "1.7", features = ["zeroize_derive"] }  # Очистка памяти

# Flutter мост
flutter_rust_bridge = "2.11.1"

# P2P сеть
libp2p = { version = "0.53", features = [
    "tcp", "noise", "yamux", "gossipsub", "mdns", "tokio", "macros"
]}
tokio   = { version = "1", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

# Сериализация
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Утилиты
sha2       = "0.10"
hex        = "0.4"
thiserror  = "1.0"

# База данных
rusqlite = { version = "0.31", features = ["bundled"] }
argon2   = "0.5"      # Argon2id для деривации ключа
password-hash = "0.5"  # ← ДОБАВИТЬ (нужен для argon2 0.5)

# Разное
lazy_static = "1.4"
clap        = { version = "4", features = ["derive"] }

# FFI (для Flutter)
ffi-support = "0.4"

# Для безопасного хранения секретов в OS
keyring = "2.0"
# Для кодирования бинарной соли в строку (требуется некоторым бэкендам keyring)
base64 = "0.21"

# Логирование (добавлено для задачи #17)
log = "0.4"