[workspace]
members = [
    "root-ffi",
    "root-identity",
    "root-crypto",
    "root-storage",
    "root-network",
    "root-economy",
    "root-core", "root-domain",
]
resolver = "2"

[workspace.dependencies]
# Утилиты
once_cell     = "1.19"
log           = "0.4"
env_logger    = "0.11"
hex           = "0.4"
base64        = "0.21"
dirs          = "5.0"
keyring = "2.0"


# Сериализация
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"

# Ошибки
thiserror = "2.0"

# Крипто
zeroize       = { version = "1.7", features = ["zeroize_derive"] }
sha2          = "0.10"
rand          = { version = "0.8", features = ["getrandom"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
argon2        = "0.5"
password-hash = "0.5"

# Async
tokio         = { version = "1", features = ["full"] }

# БД
rusqlite      = { version = "0.31", features = ["bundled"] }

# Внутренние крейты
root-crypto   = { path = "root-crypto" }
root-identity = { path = "root-identity" }
root-storage  = { path = "root-storage" }
root-economy  = { path = "root-economy" }
root-network  = { path = "root-network" }
root-core     = { path = "root-core" }
