[package]
name = "root-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
root-storage = { path = "../root-storage" } 
chacha20poly1305 = "0.10"
argon2           = "0.5"
password-hash    = "0.5"
ed25519-dalek    = { version = "2.0", features = ["rand_core"] }
x25519-dalek     = "2.0"
rand             = { version = "0.8", features = ["getrandom"] }
zeroize          = { version = "1.7", features = ["zeroize_derive"] }
sha2             = "0.10"
thiserror        = "1.0"
serde            = { version = "1.0", features = ["derive"] }
generic-array = "0.14"
base64        = "0.21"