[package]
name = "root-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
chacha20poly1305 = "0.10"
x25519-dalek     = "2.0"
generic-array    = "0.14"
ed25519-dalek    = { workspace = true }
rand             = { workspace = true }
zeroize          = { workspace = true }
sha2             = { workspace = true }
thiserror        = { workspace = true }
serde            = { workspace = true }
base64           = { workspace = true }
argon2           = { workspace = true }
password-hash    = { workspace = true }
