[package]
name = "root_ffi"
version = "0.1.0"
edition = "2024"
metadata.todo = [
    "#37: Активировать salt_manager для ротации ключей"
]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(frb_expand)'] }

[lib]
name = "root_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "root-cli"
path = "src/cli/main.rs"

[dependencies]
# Уникальные для root-ffi
bip39              = "2.0"
sharks             = "0.5"
x25519-dalek       = "2.0"
generic-array      = "0.14"
chacha20poly1305   = "0.10"
futures            = "0.3"
tracing            = "0.1"
tracing-subscriber = "0.3"
lazy_static        = "1.4"
clap               = { version = "4", features = ["derive"] }
ffi-support        = "0.4"
flutter_rust_bridge = "2.11.1"
rstest             = "0.18"
criterion          = "0.4"
libp2p = { version = "0.53", features = [
    "tcp", "noise", "yamux", "gossipsub", "mdns", "tokio", "macros"
]}

# Workspace
once_cell     = { workspace = true }
ed25519-dalek = { workspace = true }
rand          = { workspace = true }
zeroize       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
sha2          = { workspace = true }
hex           = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true }
rusqlite      = { workspace = true }
argon2        = { workspace = true }
password-hash = { workspace = true }
base64        = { workspace = true }
dirs          = { workspace = true }
keyring       = { workspace = true }
log           = { workspace = true }
env_logger    = { workspace = true }
root-identity = { workspace = true }
root-crypto   = { workspace = true }
root-storage  = { workspace = true }
root-network  = { workspace = true }
root-economy  = { workspace = true }
root-core     = { workspace = true }
