[package]
name = "root-identity"
version = "0.1.0"
edition = "2024"

[dependencies]
bip39         = "2.0"
sharks        = "0.5"
ed25519-dalek = { workspace = true }
rand          = { workspace = true }
zeroize       = { workspace = true }
serde         = { workspace = true }
hex           = { workspace = true }
thiserror     = { workspace = true }
root-crypto   = { workspace = true }
