[package]
name = "root-network"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.53", features = [
    "tcp", "noise", "yamux", "gossipsub", "mdns", "tokio", "macros"
]}
tokio   = { version = "1", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex  = "0.4"
