[package]
name = "root-network"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.53", features = [
    "tcp", "noise", "yamux", "gossipsub", "mdns", "tokio", "macros", "quic"
]}
futures            = "0.3"
tracing            = "0.1"
tracing-subscriber = "0.3"
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
thiserror   = { workspace = true }
root-crypto = { workspace = true }
