[package]
name = "root-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
root-crypto = { path = "../root-crypto" }
rusqlite    = { version = "0.31", features = ["bundled"] }
argon2      = "0.5"
password-hash = "0.5"
zeroize     = { version = "1.7", features = ["zeroize_derive"] }
serde       = { version = "1.0", features = ["derive"] }
sha2        = "0.10"
thiserror   = "1.0"
dirs        = "5.0"
base64      = "0.21"
keyring     = "2.0"
rand = { version = "0.8", features = ["getrandom"] }
log = { workspace = true }
env_logger = { workspace = true }
hex  = "0.4"
