[package]
name = "root-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
keyring       = "2.0"
rusqlite      = { workspace = true }
argon2        = { workspace = true }
password-hash = { workspace = true }
zeroize       = { workspace = true }
serde         = { workspace = true }
sha2          = { workspace = true }
thiserror     = { workspace = true }
base64        = { workspace = true }
rand          = { workspace = true }
hex           = { workspace = true }
dirs          = { workspace = true }
log           = { workspace = true }
env_logger    = { workspace = true }
root-crypto   = { workspace = true }
root-domain   = { workspace = true }
