[package]
name = "root-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"

# ✅ Наши крейты: имя = { package = "точное-имя-из-cargo", path = "..." }
root_ffi = { package = "root_ffi", path = "../../root-ffi" }
root_core = { package = "root-core", path = "../../root-core" }

# 🔧 Изоляция от родительского workspace
[workspace]

# 🔧 Метаданные для tauri-build
[package.metadata.tauri]
